--- a/IntelliFiller/SettingsWindow.ui
+++ b/IntelliFiller/SettingsWindow.ui
@@ -52,6 +52,20 @@
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="labelGeminiKey">
+     <property name="text">
+      <string>Google Gemini API Key:</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLineEdit" name="geminiKey">
+     <property name="placeholderText">
+      <string>Google Gemini API key</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QLabel" name="labelSelectedApi">
      <property name="text">
       <string>Selected API:</string>
@@ -68,6 +82,11 @@
      <item>
       <property name="text">
        <string>anthropic</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>gemini</string>
       </property>
      </item>
     </widget>
